--- a/django_blog/blog/templates/blog/base.html
+++ b/django_blog/blog/templates/blog/base.html
@@ -27,5 +27,14 @@
     {% endif %}
 
     <main>{% block content %}{% endblock %}</main>
+    <form method="get" action="{% url 'search-results' %}">
+      <input
+        type="text"
+        name="q"
+        placeholder="Search posts..."
+        value="{{ request.GET.q }}"
+      />
+      <button type="submit">Search</button>
+    </form>
   </body>
 </html>
