--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -23,3 +23,8 @@
 {% endif %}
 <p><a href="{% url 'post-list' %}">Back to posts</a></p>
 {% endblock %}
+<p>
+  Tags: {% for tag in post.tags.all %}
+  <a href="{% url 'posts-by-tag' tag.slug %}">{{ tag.name }}</a>{% if not
+  forloop.last %}, {% endif %} {% empty %} No tags {% endfor %}
+</p>
